--- a/index.html
+++ b/index.html
@@ -15,24 +15,35 @@
         </header>
         <div class="historia">
             <h2>História Geral</h2>
-            <p>A história da consciência negra é uma trajetória vasta e complexa, que se estende por séculos e por
-                diversas regiões do mundo, representando a resposta de populações negras à opressão, à escravidão e ao
-                racismo. No Brasil, essa história se manifesta desde a formação dos quilombos, como Palmares, que sob a
-                liderança de Zumbi, se tornou um símbolo de resistência. Essa data é uma reivindicação pela memória e
-                pela verdadeira história da população negra, rompendo com a narrativa que a invisibilizou por muito
-                tempo. A história da consciência negra é, portanto, um testemunho da resiliência e da luta incansável
-                dos povos negros por justiça, reconhecimento e igualdade em todo o mundo.</p>
+            <div class="container">
+                <img src="consciencia-negra.png" alt="Consciencia Negra">
+                <p>A história da consciência negra é uma trajetória vasta e complexa, que se estende por séculos e por
+                    diversas regiões do mundo, representando a resposta de populações negras à opressão, à escravidão e
+                    ao
+                    racismo. No Brasil, essa história se manifesta desde a formação dos quilombos, como Palmares, que
+                    sob a
+                    liderança de Zumbi, se tornou um símbolo de resistência. Essa data é uma reivindicação pela memória
+                    e
+                    pela verdadeira história da população negra, rompendo com a narrativa que a invisibilizou por muito
+                    tempo. A história da consciência negra é, portanto, um testemunho da resiliência e da luta
+                    incansável
+                    dos povos negros por justiça, reconhecimento e igualdade em todo o mundo.</p>
+            </div>
         </div>
         <div class="projetos-historia">
             <h3>História Afro</h3>
             <ul>
-                
+
                 <li><a href="">Capoeira</a> - Giovana de Souza Barbosa.</li>
+                <li><a href="">léa Garcia</a> - Raquely Alves de Almeida.</li>
+                <li><a href="">Sergio Oliveira</a> - Rodrigo de Grande.</li>
+                <li><a href="">Nilo Penhaça</a> - Ruan Carlos Pereira de Freitas.</li>
+
             </ul>
 
         </div>
 
-        <div class="projetos-figuras">
+        <div class="figuras-historicas">
             <h3>Figuras Históricas</h3>
             <ul>
                 <li><a href="">André Ramiro</a> - Gustavo Lobo.</li>
@@ -45,25 +56,26 @@
                 <li><a href="">Snoop Dogg</a> - Gabriel De Jesuz dos Santos.</li>
                 <li><a href="">Ronnie Coleman</a> - Guilherme Oliveira da Silva.</li>
                 <li><a href="">Michael Jordan</a> - João Pedro Camargo de Araujo.</li>
-                
-
-
-
+                <li><a href="">Vinicius Júnior</a> - José Guilherme Zansavio Gonçalves.</li>
+                <li><a href="">Mario Balotelli</a> - Kauã Hideky Ezaky dos Reis Carreira.</li>
+                <li><a href="">Marcus Rashford</a> - Victor Barros Otávio.</li>
             </ul>
 
         </div>
 
         <div class="musicas">
             <h3>Músicas</h3>
-            <li><a href="">Ivy - Frank Ocean</a> - Ana Karolina Morais Brasil.</li>
-            <li><a href="">Olhos coloridos - Sandra de Sá</a> - Gabrielli Vitoria Gomes da Silva.</li>
-            <li><a href="">Um Amor Puro - Djavan</a> - Hévelyn Martins de Arruda.</li>
-
-
+            <ul>
+                <li><a href="">Ivy - Frank Ocean</a> - Ana Karolina Morais Brasil.</li>
+                <li><a href="">Olhos coloridos - Sandra de Sá</a> - Gabrielli Vitoria Gomes da Silva.</li>
+                <li><a href="">Um Amor Puro - Djavan</a> - Hévelyn Martins de Arruda.</li>
+                <li><a href="">They Don't Care About Us - Michael Jackson</a> - Karine Evelin Formentini da Silva.</li>
+                <li><a href="">Negro Drama - Racionais MC's</a> - Yasmin Martins Gusmão.</li>
+            </ul>
         </div>
 
         <footer>
-            <h4> &copy; Site Criado por Rafaelly Caroline Domingues - 2025 </h4>
+            <h4> &copy; Página Criada por Rafaelly Caroline Domingues - 2025 </h4>
         </footer>
     </main>
 </body>
