--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <footer>
             <h4> &copy; Página Criada por Rafaelly Caroline Domingues - 2025 </h4>
         </footer>
+        <script src="app.js"></script>
     </main>
 </body>
 
