--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             </ul>
         </div>
 
+        <aside id="back-to-top-button" class="back-to-top">↑</aside>
+
         <footer>
             <h4> &copy; Página Criada por Rafaelly Caroline Domingues - 2025 </h4>
         </footer>
