--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <li><a href="">Capoeira</a> - Giovana de Souza Barbosa.</li>
                 <li><a href="">léa Garcia</a> - Raquely Alves de Almeida.</li>
-                <li><a href="">Sergio Oliveira</a> - Rodrigo de Grande.</li>
+                <li><a href="">Sergio Oliva</a> - Rodrigo de Grande.</li>
                 <li><a href="">Nilo Penhaça</a> - Ruan Carlos Pereira de Freitas.</li>
 
             </ul>
