--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <li><a href="">Um Amor Puro - Djavan</a> - Hévelyn Martins de Arruda.</li>
                 <li><a href="">They Don't Care About Us - Michael Jackson</a> - Karine Evelin Formentini da Silva.</li>
                 <li><a href="">Negro Drama - Racionais MC's</a> - Yasmin Martins Gusmão.</li>
+                <li><a href="">Racistas Otários - Racionais MC's</a> - Gabriel Henrique Colioni.</li>
             </ul>
         </div>
 
